--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@
     background-color: #5995DA;  /* Blue */
     padding: 20px 0;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
   }
   
   .menu {
     border: 2px solid #fff;  /* For debugging */
     width: 1200px;
-    margin-right: 20px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
   }
@@ -33,6 +33,7 @@
   .content {
     display: flex;
     justify-content: center;
+    flex-grow: 1;
     background-color: lightblue;
     text-align: left;
     /*margin: 10px;*/
@@ -50,16 +51,24 @@
     border: 1px thick lavenderblush;
     margin-left: 20px;
     padding: 5px;
+    font-size: 15px;
   }
 
   h1 {
-    margin: 0 auto;
+    margin-left: 10px;
     text-align: justify;
-    word-spacing: 1;
   }
   p {
     display: flex;
-    justify-content: space-around;
+    align-content: stretch;
     text-align: center;
     margin-left: 10px;
+  }
+
+  .content2 {
+    margin: 15px;
+    height: 734px;
+    border: 3px salmon;
+    display: flex;
+    background-image: url("HEADER.jpg");
   }
