--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,22 @@
     background-image: url("programowanie-2.jpg");
   }
 
-  .navbar {
+
+  div.navbar {
     width: 75%;
-    height:auto;
+    height: auto;
     background-color: whitesmoke;
     margin: 0 auto;
+    padding: 10px 10px;
     border: 2px solid whitesmoke;
     border-radius: 5px;
     margin: 0 auto;
+    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     align-content: space-between;
     justify-content: space-around;
-       
   }
 
   div.navbar * {
@@ -29,6 +31,7 @@
     text-align: center;
     padding: 8px;
     width: 100px;
+    font-size: 17px;
   }
 
   div.navbar :hover {
@@ -42,12 +45,10 @@
   }
   
   div.menu {
-    background-color: whitesmoke;
     width: 25%;
     border: none;
     text-align: left;
-    font-size-adjust: 20px;
-    
+    word-wrap: break-word;
   }
 
   .content {
@@ -74,10 +75,6 @@
     font-size: 15px;
   }
 
-  h1 {
-    margin-left: 10px;
-    text-align: justify;
-  }
   p {
     display: flex;
     align-content: stretch;
