--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
     background-image: url("programowanie-2.jpg");
   }
 
+  button {
+    margin: 10px;
+  }
 
   div.navbar {
     width: 75%;
@@ -57,7 +60,6 @@
     flex-grow: 1;
     background-color: lightblue;
     text-align: left;
-    /*margin: 10px;*/
   }
   
   .footer {
@@ -67,22 +69,19 @@
     border: 2px solid;
   }
 
-  h2 {
-    background: lemonchiffon;
-    border: 1px thick lavenderblush;
-    margin-left: 20px;
-    padding: 5px;
-    font-size: 15px;
+  h1 {
+    text-align: center;
   }
 
   p {
     display: flex;
     align-content: stretch;
-    text-align: center;
+    text-align: left;
     margin-left: 10px;
   }
 
   .flex-container {
+    
     margin: 0 auto;
     display: -webkit-flex;
     display: flex;
@@ -92,6 +91,7 @@
     background-color: transparent;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: stretch;
 }
 
   .flex-item {
@@ -99,8 +99,7 @@
     width: 25%;
     height: auto;
     display: flex;
-    justify-content: center;
-    text-align: left !important;
+    justify-content: left;
     flex-flow: row wrap;
     flex-wrap: wrap;
     flex-direction: row;
