--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@
 
   h1 {
     text-align: center;
+    display: flex;
+    font-size: 20px;
+    word-wrap: break-word;
+   
   }
 
   p {
@@ -95,6 +99,7 @@
 }
 
   .flex-item {
+    word-wrap: break-word;
     background-color: rgb(223, 228, 231);
     width: 25%;
     height: auto;
