--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,18 @@
   }
   body {
     width: 25%;
+    height: 100%;
   }
-  div.menu {
-    width: 50%;
-  }
+
   div.flex-item {
-    width: 50%;
+    width: 60%;
+  }
+}
+
+@media (min-width: 992px) {
+  div.flex-item {
+    width: 500px;
+    height: 600px;
   }
 }
 
@@ -31,36 +37,20 @@
     width: 100%;
     height: auto;
   }
-
-  div.navbar {
-    width: 74%;
-    height: auto;
-    background-color: whitesmoke;
-    margin: 0 auto;
-    padding: 10px 10px;
-    border: 2px solid whitesmoke;
-    border-radius: 5px;
-    margin: 0 auto;
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-content: space-between;
-    justify-content: space-around;
-  }
-
-  div.navbar * {
-    border: 1px solid black;
-    border-radius: 4px;
+  
+  a.navbar-brand {
     text-align: center;
-    padding: 8px;
-    width: 100px;
-    font-size: 17px;
   }
 
-  div.navbar :hover {
-    background-color: #f3b00c;
+  a {
+    text-align: center;
+    width: 150px;
+    height: auto;
+    background-color: rgb(7, 6, 6);
+    border: 2px solid rgba(14, 13, 13, 0.486);
+    border-radius: 5px;
   }
+
 
   .header {
     background-color:transparent;
