--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,18 @@
     font-size: 22px;
   }
 
+  button.navbar-toggler {
+    margin: 0 auto;
+    width: 60px;
+    height: 60px;
+  }
+
+  .navbar-toggler-icon {
+    width: 35px;
+    height: 40px;
+    margin: 0 auto;
+  }
+
   .navbar-nav > a.nav-link {
     color: rgb(234, 14, 14);
   }
@@ -51,7 +63,7 @@
     text-align: center;
     width: 150px;
     height: auto;
-    background-color: rgb(7, 6, 6);
+    background-color: rgba(7, 6, 6, 0);
     border: 2px solid rgba(14, 13, 13, 0.486);
     border-radius: 5px;
     color: rgba(249, 3, 3, 0.9);
