--- a/mystyles.css
+++ b/mystyles.css
@@ -1,42 +1,65 @@
-* {
-    box-sizing: border-box;
-  }
-
 body {
     width: 100%;
-    /*background-image: url("programowanie-2.jpg");*/
+    background-image: url("programowanie-2.jpg");
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
   }
 
-header {
-    display: inline;
+.navbar-nav {
+    display:inline-flex;
+    margin: 0 auto;
+    margin-top: 5px;
+    color: rgba(248, 233, 233, 0.9);
+}
+
+.bg-faded {
+    background-color: rgba(247, 247, 247, 0.42);
+}
+
+.collapse {
+    margin: 0 auto;
+    text-align: center;
+}
+
+a.navbar-brand {
+    font-size: 25px;
+    text-shadow:5px 5px 3px red;
+}
+
+.nav-item.nav-link {
+    font-size: 18px;
+    color: orange;
+}
+
+button.navbar-toggler {
+    background-color: rgba(17, 14, 14, 0.835);
+    width: 60px;
+    height: auto;
+    background-color: orange;
+    border-color: orangered !important;
 }
 
 a.nav-link {
     margin: 15px;
     margin-top: 5px;
     text-align: center;
+    line-height: auto;
     width: 150px;
     height: auto;
-    background-color: rgba(228, 19, 19, 0.363);
-    border: 2px solid rgba(223, 215, 215, 0.911);
+    border: 2px solid rgba(155, 8, 8, 0.911);
     border-radius: 5px;
     color: rgba(248, 233, 233, 0.9);
 }
 
-button.navbar-toggler {
-    background-color: rgba(17, 14, 14, 0.835);
-    width: 60px;
-    height: 60px;
-    background-color: orange;
-    border-color: orangered !important;
+section.carousel {
+    display: initial;
+    margin: 0 auto;
+    border: 1px solid rgba(20, 19, 19, 0.479);
+    border-radius: 5px;
+    color: rgba(248, 233, 233, 0.9);
 }
 
-.navbar-toggler-icon {
-    display: inline-block;
-    width: 1.5em;
-    height: 1.5em;
-    vertical-align: middle;
+.btn-info {
+    margin: 0 auto;
 }
 
 .flex-container {
@@ -63,7 +86,7 @@ article.flex-item {
     
 }
 
-img {
+img  {
     width: 100%;
     height: auto;
   }
