--- a/mystyles.css
+++ b/mystyles.css
@@ -108,6 +108,10 @@ img  {
       article.flex-item {
           width: 65%;
       }
+
+      .navbar-brand img {
+        display: none;
+    }
   } 
 
   @media (min-width: 993px) {
@@ -115,4 +119,5 @@ img  {
       width: 27%;
       height: auto;
     }
+
   }
