--- a/mystyles.css
+++ b/mystyles.css
@@ -1,10 +1,12 @@
 body {
     display: block;
     width: 100%;
-    background-color: lightslategray;
+    background-color: rgb(246, 246, 246);
     /*background-image: url("programowanie-2.jpg");*/
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
   }
+
+/*---NAVBAR----*/
 
 .navbar-nav {
     display: flex;
@@ -24,8 +26,8 @@ body {
 }
 
 a.navbar-brand {
-    font-size: 25px;
-    text-shadow:5px 5px 3px red;
+    padding: 0 10px;
+    margin-top: 5px;
 }
 
 .nav-item.nav-link {
@@ -63,6 +65,8 @@ a.nav-link {
     color: rgba(248, 233, 233, 0.9);
 }
 
+/* ----KARUZELA---- */
+
 section.carousel {
     margin: 0 auto;
     width: 100%;
@@ -81,6 +85,8 @@ height: 500px;
     font-size: 22px;
     text-shadow:5px 5px 3px rgb(250, 116, 7);
 }
+
+/* ---TABELE POD KARUZELĄ--- */
 
 .btn-info {
     margin: 0 auto;
@@ -113,6 +119,10 @@ article.flex-item {
     
 }
 
+.flex-item img {
+    margin: 0 auto;
+}
+
 
 .column-item {
     width: 200px;
@@ -121,11 +131,13 @@ article.flex-item {
     float: left;
 }
 
+/* ---CONTENT_STORE---*/
+
 .container {
     margin: 0 auto;
     width: 100%;
     height: auto;
-    background-color: gray;
+    background-color: rgba(219, 210, 210, 0.808);
 }
 
 .content_store {
@@ -141,6 +153,8 @@ article.flex-item {
     height: auto;
 }
 
+/*---FOOTER----*/
+
 footer.container_footer {
     width: 100%;
     min-height: 60px;
@@ -154,9 +168,78 @@ footer.container_footer {
 }
 
 img  {
-    width: 100%;
+    max-width: 100%;
     height: auto;
   }
+
+  /* Strona "Services" */
+
+  main.container  {
+      max-width: 100%;
+      height: auto;
+      margin-left: 35px;
+      background-color: inherit;
+      display: flex;
+      flex-direction: column;
+  }
+
+main.container h1 {
+    padding: 0 0 30px 0;
+    margin: 20px;
+    margin-left: 40px;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+/*----- KOLUMNY NA STRONIE----*/
+
+.columnContent {
+    display: block;
+    margin: 30px;
+    max-width: 40%;
+    height: auto;
+    margin: 15 25px;
+    background-color: rgba(128, 128, 128, 0.205);
+}
+
+/* ------ <h> oraz <p>-----*/
+
+.columnContent h2 {
+    padding-left: 10px;
+    margin: 0;
+    line-height: normal;
+}
+
+.columnContent p {
+    line-height: 1.7;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 8px;
+}
+
+.colImage {
+    float: right;
+    max-width: 100%;
+    height: auto;
+    margin-top: 60px;
+}
+
+mark {
+    margin-left: 6px;
+}
+
+a.label {
+    display: inline-block;
+    padding: 5px 10px;
+    margin: 0;
+    border-radius: 3px;
+    color: #999 !important;
+    font-weight: normal;
+    background-color: #f3f3f3;
+    border: 0;
+}
+
+/* ----@media queries----*/
 
   @media (max-width: 992px) {
       article.flex-item {
@@ -164,7 +247,7 @@ img  {
       }
 
       .navbar-brand img {
-        display: none;
+       display: none;
     }
   } 
 
