--- a/mystyles.css
+++ b/mystyles.css
@@ -10,14 +10,16 @@ body {
 
 .navbar-nav {
     display: flex;
+    height: auto;
+    padding: 5px;
     margin: 0 auto;
-    margin-top: 5px;
     color: rgba(248, 233, 233, 0.9);
 }
 
 .bg-faded {
     background-color: rgba(106, 209, 209, 0.705);
     margin: 0 auto;
+    height: 60px;
 }
 
 .collapse {
@@ -26,12 +28,12 @@ body {
 }
 
 a.navbar-brand {
-    padding: 0 10px;
-    margin-top: 5px;
+    max-width: 100%;
+    height: auto;
 }
 
 .nav-item.nav-link {
-    font-size: 18px;
+    font-size: 14px;
     color: orange;
 }
 
@@ -77,12 +79,12 @@ section.carousel {
 
 .w-100 {
 width: 100% !important;
-height: 500px;
+height: auto;
 }
 
 .carousel-caption > p {
     color: black !important;
-    font-size: 22px;
+    font-size: 15px;
     text-shadow:5px 5px 3px rgb(250, 116, 7);
 }
 
@@ -94,6 +96,7 @@ height: 500px;
 
 .flex-container {
     margin: 0 auto;
+    height: auto;
     display: flex;
     justify-content: space-around;
     flex-flow: row wrap;
@@ -168,7 +171,7 @@ footer.container_footer {
 }
 
 img  {
-    max-width: 100%;
+    width: 100%;
     height: auto;
   }
 
