--- a/mystyles.css
+++ b/mystyles.css
@@ -162,7 +162,7 @@ article.flex-item {
 
 /*---FOOTER----*/
 
-footer.container_footer {
+footer.containerFooter {
     width: 100%;
     min-height: 60px;
     height: auto;
