--- a/mystyles.css
+++ b/mystyles.css
@@ -1,5 +1,4 @@
 body {
-    display: block;
     width: 100%;
     background-color: rgb(246, 246, 246);
     /*background-image: url("programowanie-2.jpg");*/
@@ -11,7 +10,7 @@ body {
 div.myNavbar {
     display: flex;
     width: 100%;
-    height: 65px;
+    height: auto;
     margin: 0 auto;
 }
 
@@ -181,13 +180,14 @@ img  {
 
   /* ----------Strona "Services"-------- */
 
+
   main.container  {
       max-width: 100%;
       height: auto;
-      margin-left: 35px;
       background-color: inherit;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
+      justify-content: center;
   }
 
   a.navbar-brand img {
@@ -195,9 +195,6 @@ img  {
     height: auto;
   }
 
-article.heading {
-    display: block;
-}
 
 main.container h1 {
     margin: 20px;
@@ -208,10 +205,25 @@ main.container h1 {
 
 /*----- KOLUMNY NA STRONIE----*/
 
+
+.rightColumn {
+    margin-top: 25px;
+    width: 35%;
+    height: auto;
+    float: left;
+    background-color: gray;
+}
+
+.leftColumn {
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    margin-top: 20px;
+}
+
 .columnContent {
-    display: block;
-    margin: 30px;
-    max-width: 40%;
+    margin: 30px; 
+    max-width: 100%;
     height: auto;
     margin: 15 25px;
     background-color: rgba(128, 128, 128, 0.205);
@@ -257,6 +269,7 @@ button.btn-warning {
     margin-left: 6px;
     margin-bottom: 6px;
 }
+
 
 /* ----@media queries----*/
 
