--- a/Rocket Design Starter Files/style.css
+++ b/Rocket Design Starter Files/style.css
@@ -6,6 +6,7 @@
     border: 0;
 }
 body {
+    width: 100%;
     background-color: #f5f5f5;
     color: #67727A;
     font-family: 'Alegreya Sans', sans-serif;
@@ -287,13 +288,13 @@ footer.second p {
         display: none;      /* menu nie pojawia sie na na rozdz. mobile */
         z-index: 1000;      /* mowi przeglądarce zeby wyswietlac ten element ponad wszystkimi */
         position: absolute;
-        padding: 20px;
+        padding: 0;
         background: #6991AC;
-        margin-right: 20px;
-        margin-top: 60px;
+        left: 10px;
+        right: 10px;
         border: 1px solid #fff;
         border-radius: 10px 0 10px 10px;
-        width: 50%;              
+        max-width: 100%;              
     }
     nav:hover ul {
         display: block;
