--- a/website/css/style.css
+++ b/website/css/style.css
@@ -67,14 +67,11 @@ button.navbar-toggler {
   #photos img {
     width: 30%;
     float: left;
-    display: flex;
+    display: block;
     margin: 2px;
   }
   
   ul {
-    display: flex;
-    flex-flow: row wrap;
-    flex-wrap: wrap;
     list-style: none;
     margin: 0px auto;
     padding: 10px;
