--- a/website/css/style.css
+++ b/website/css/style.css
@@ -5,12 +5,12 @@ body {
     background-color: #f5f5f5;
     margin: 0; 
 }
-
+/*NAVBAR*/
 div.myNavbar {
-    display: flex;
+    display: table;
     float: right;
     width: 100%;
-    height: auto;
+    height: 87px;
     margin: 0 auto;
 }
 
@@ -23,6 +23,7 @@ div.navbar-nav {
     width: 100%;
     margin: 0 auto;
     height: auto;
+    z-index: 1000;
 }
 
 .collapse {
@@ -30,8 +31,9 @@ div.navbar-nav {
     text-align: center;
 }
 
-a.navbar-brand {
-    max-width: 100%;
+.navbar-brand img {
+    width: 70%;
+    height: 70%;
 }
 
 .navbar-toggler-right {
@@ -53,10 +55,11 @@ button.navbar-toggler {
     text-align: center;
     width: 100px;
     height: auto;
-    font-size: 170%;
+    font-size: 160%;
     color: rgba(248, 233, 233, 0.9);
     padding: 1px;
 }
+/*end NAVBAR*/
 
 /*GALLERY*/
 
@@ -67,8 +70,8 @@ button.navbar-toggler {
   #photos img {
     width: 30%;
     float: left;
-    display: block;
     margin: 2px;
+    display: inline-flex;
   }
   
   ul {
@@ -111,5 +114,8 @@ button.navbar-toggler {
     }
     #photos img {
         width: 100%;
+    }
+    .navbar-brand img {
+        display: none;
     }
 }
