--- a/cms-master/css/custom.css
+++ b/cms-master/css/custom.css
@@ -483,9 +483,9 @@ aside p1 {
     margin-left: 6px;
     margin-bottom: 6px;
     border-radius: 4px;
-    background-color: #f4511e;
+    background-color: #d14816;
     border: none;
-    color: #FFFFFF;
+    color: rgb(27, 26, 26);
     text-align: center;
     font-size: 18px;
     padding: 10px;
