--- a/cms-master/css/tab-style.css
+++ b/cms-master/css/tab-style.css
@@ -27,6 +27,7 @@
   background: #ffc107;
 }
 #body .out-wrap #tabs {
+  height: 50px;
   border-bottom: 0;
   margin: 0 -50px 20px;
   background: #303030;
