--- a/cms-master/css/custom.css
+++ b/cms-master/css/custom.css
@@ -99,3 +99,11 @@ aside p1 {
   }
 
   /* button info END*/
+
+/* DANE */
+#dane ul {
+    list-style-type: none;
+    text-align: left;
+    line-height: 2.1;
+    font-size: 120%;
+}
