--- a/cms-master/css/custom.css
+++ b/cms-master/css/custom.css
@@ -141,10 +141,11 @@ aside p1 {
     text-transform: none;
 }
 
-aside p3 {
-    margin-top: 10px;
+ul.bottom {
     text-align: left;
-    line-height: 0.5;
+    margin-top: 10px !important;
+    line-height: 0.2 !important;
+    list-style-type: none;
     
 }
 
