--- a/cms-master/css/custom.css
+++ b/cms-master/css/custom.css
@@ -1,56 +1,71 @@
-/* Tu dodawaj style */
+h1 {
+  text-align: center;
+  color: #f29400;
+  width: 100%;
+}
+
+a {
+  color: #f29400;
+}
+
+a:hover {
+  color: #000;
+}
+
+#contact-submit {
+  background: #000;
+  color: #f29400;
+}
+
+#home {
+  padding-top: 122px;
+}
 
 /* ---BOXY POD KARUZELĄ--- */
 
 .btn-info {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
-
 .flex-container {
-    position: static;
-    width: 100%;
-    margin: 0 auto;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
+  position: static;
+  width: 100%;
+  margin: 0 auto;
+  height: auto;
+  display: flex;
+  justify-content: space-around;
 }
 
 article.flex-item {
-    display: table-column;
-    padding: 7px;
-    background-color: rgb(233, 110, 29);
-    height: auto;
-    margin: 15px;
-    border-radius: 4px;
-
+  padding: 1em;
+  background-color: #f29400;
+  width: 100%;
 }
 
 article.flex-item h1 {
-    padding: 10px;
-    font-size: 180%;
-    text-align: center;
-    line-height: 1.5;
+  padding: 10px;
+  font-size: 180%;
+  text-align: center;
+  line-height: 1.5;
 }
 
 aside {
-    width: 100%;
-    height: auto;
-    left: 26px;
-    right: 5px;
-
+  width: 100%;
+  height: auto;
+  left: 26px;
+  right: 5px;
 }
 
 aside p1 {
-    font-size: 120%;
-    text-indent: 50px;
-    text-align: justify;
+  font-size: 120%;
+  text-indent: 50px;
+  text-align: justify;
 }
 
 .flex-item img {
-    display: block;
-    max-width: 100%;
-    margin: 10px auto;
+  display: block;
+  max-width: 100%;
+  margin: 10px auto;
 }
 
 /* ---BOXY POD KARUZELĄ END--- */
@@ -58,94 +73,114 @@ aside p1 {
 /* button info*/
 
 .btn-info {
-    margin-left: 6px;
-    margin-bottom: 6px;
-    border-radius: 4px;
-    background-color: #d14816;
-    border: none;
-    color: rgb(27, 26, 26);
-    text-align: center;
-    font-size: 18px;
-    padding: 10px;
-    width: 100px;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 5px;
+  margin-left: 6px;
+  margin-bottom: 6px;
+  background-color: #000;
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  width: 100px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.btn-info:hover {
+  background: #FFF;
+  color: #000;
 }
 
 .btn-info span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 1.5s;
-  }
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
 
-  .btn-info span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: 20px;
-    transition: 0.5s;
-  }
+.btn-info span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: 20px;
+  transition: 0.5s;
+}
 
-  .btn-info:hover span {
-    padding-right: 25px;
-  }
+.btn-info:hover span {
+  padding-right: 1em;
+}
 
-  .btn-info:hover span:after {
-    opacity: 1;
-    right: 0;
-  }
+.btn-info:hover span:after {
+  opacity: 1;
+  right: 0;
+}
 
-  /* button info END*/
+/* button info END*/
 
 /* sekcja-DANE */
 
 #dane {
-    width: 400px;
+  width: 400px;
 }
+
 .fa {
-    padding-right: 14px;
+  padding-right: 14px;
 }
 
 #dane ul {
-    list-style-type: none;
-    text-align: left;
-    line-height: 2.1;
-    font-size: 120%;
+  list-style-type: none;
+  text-align: left;
+  line-height: 2.1;
+  font-size: 120%;
 }
 
 .one {
-    line-height: 1.4;
+  line-height: 1.4;
 }
 
 #map {
-    height: 400px;
-    width: 100%;
+  height: 400px;
+  width: 100%;
 }
 
 /* section-Raty */
 
+#raty div {
+  text-align: left;
+}
+
 #raty ul li {
-    margin-left: 35px;
-    padding-bottom: 20px;
-    text-align: left;
-    line-height: 1.2;
+  margin-left: 3em;
+  padding-bottom: 0.5em;
+  text-align: left;
+  line-height: 1;
 }
 
 #raty h3 {
-    margin-top: 15px;
-    text-align: left;
-    color: red;
-    text-transform: none;
+  margin: .5em;
+  text-align: left;
+  color: red;
+  text-transform: none;
 }
 
-ul.bottom  {
-    text-align: left;
-    margin-top: 10px !important;
-    line-height: 0.3;
-    list-style-type: none;
+#raty .header {
+  margin-left: -36px;
+}
+
+ul.bottom {
+  text-align: left;
+  margin-top: 10px !important;
+  line-height: 0.3;
+  list-style-type: none;
 }
 
 /* section-Raty-end */
+
+/*oferta*/
+
+.tab-content p {
+  text-align: left;
+  line-height: 1.3;
+}
