--- a/cms-master/css/tab-style.css
+++ b/cms-master/css/tab-style.css
@@ -1,7 +1,4 @@
 #body {
-  background: #3D5A68;
-  min-height: 90vh;
-  font-family: 'Josefin Sans', sans-serif;
   text-transform: captalize;
   letter-spacing: 2px;
 }
@@ -21,21 +18,16 @@
 #body .out-wrap {
   position: relative;
   padding: 30px;
-  box-shadow: 0 6px 10px -2px rgba(0, 0, 0, 0.25);
-  width: 400px;
-  
   margin: 50px auto;
-  background: #ffc107;
 }
 #body .out-wrap #tabs {
   height: 50px;
   border-bottom: 0;
   margin: 0 -50px 20px;
-  background: #303030;
+  background: #000;
   display: flex;
   overflow-x: scroll;
   overflow-y: hidden;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   flex-wrap: nowrap !important;
 }
 #body .out-wrap #tabs::-webkit-scrollbar {
@@ -59,8 +51,8 @@
   font-size: 120%;
 }
 #body .out-wrap #tabs li a:hover {
-  background: #ddd;
-  color: #303030;
+  background: #f29400;
+  color: #000;
 }
 #body .out-wrap #tabs li.active a {
   background: #fff;
