--- a/cms-master/scss/style.scss
+++ b/cms-master/scss/style.scss
@@ -2,14 +2,12 @@
 @import 'mixins.scss';
 body {
   font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-
   position: relative;
-
   width: 100%;
   height: 100%;
-
   color: #000;
   background-color: #FFF;
+  overflow-x: hidden;
 }
 
 html {
