--- a/cwiczenia/css/jquery.pagepiling.css
+++ b/cwiczenia/css/jquery.pagepiling.css
@@ -49,7 +49,7 @@ html, body {
 }
 .pp-tableCell {
     display: table-cell;
-    /*vertical-align: middle; --- odłączone zeby rotator mogl byz wyzej */
+    vertical-align: middle;
     width: 100%;
     height: 100%;
 }
